<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardElevation="4dp">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary">

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="4dp"
            android:text="@string/heading_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/heading"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputEditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/item_name"
                android:padding="4dp"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputEditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/item_quantity"
                android:padding="4dp"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputEditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/item_price"
                android:padding="4dp"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/special_color"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textSize="22sp"
                    app:cornerRadius="100dp" />

                <Button
                    android:id="@+id/add_button"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/special_color"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:textSize="22sp"
                    app:cornerRadius="100dp" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


</com.google.android.material.card.MaterialCardView>

